--- a/config.py.sample
+++ b/config.py.sample
@@ -1,1 +1,4 @@
+# this is a sample config file. rename it to `config.py` and edit accordingly
+
 API_KEY = 'put your API key from kavenegar here'
+DATABASE_FILE_PATH = 'path to the file which is used by sqlite'
