--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Limiter==1.1.0
 Flask-Login==0.5.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
+limits==1.5
 MarkupSafe==1.1.1
 numpy==1.18.1
 pandas==1.0.1
+pycodestyle==2.5.0
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
@@ -17,3 +20,4 @@ six==1.14.0
 urllib3==1.25.8
 Werkzeug==1.0.0
 xlrd==1.2.0
+yapf==0.29.0
