Create tables on application startup

--- a/app/config.py.sample
+++ b/app/config.py.sample
@@ -1,14 +1,13 @@
 # this is a sample config file. rename it to `config.py` and edit accordingly
-import os
-import os
 
-API_KEY = os.getenv('API_KEY', 'put your API key from kavenegar here')
+API_KEY = 'put your API key from kavenegar here'
 
 # Mysql configs
-MYSQL_HOST = os.getenv('MYSQL_HOST', 'localhost')
-MYSQL_USERNAME = os.getenv('MYSQL_USERNAME', 'smsmysql')
-MYSQL_PASSWORD = os.getenv('MYSQL_PASSWORD', 'test')
-MYSQL_DB_NAME = os.getenv('MYSQL_DB_NAME', 'smsmysql')
+MYSQL_HOST = 'localhost'
+MYSQL_USERNAME = 'smsmysql'
+MYSQL_PASSWORD = 'test'
+MYSQL_DB_NAME = 'smsmysql'
+
 
 # call back url from KaveNegar will look like
 # /v1/CALL_BACK_TOKEN/process
@@ -21,10 +20,11 @@ PASSWORD = 'pass'
 # generate one strong secret key for flask.
 SECRET_KEY = 'random long string with alphanumeric + #()*&'
 
+
 ### Do not change below unless you know what you are doing
 UPLOAD_FOLDER = '/tmp'
 ALLOWED_EXTENSIONS = {'xlsx'}
 
-### remote systems can call this program like 
+### remote systems can call this program like
 ### /v1/{REMOTE_CALL_API_KEY}/check_one_serial/<serial> and check one serial, returns back json
 REMOTE_CALL_API_KEY = 'set_unguessable_remote_api_key_lkjdfljerlj3247LKJ'
