transfer response texts to config file

--- a/app/config.py.sample
+++ b/app/config.py.sample
@@ -28,3 +28,28 @@ ALLOWED_EXTENSIONS = {'xlsx'}
 ### remote systems can call this program like 
 ### /v1/{REMOTE_CALL_API_KEY}/check_one_serial/<serial> and check one serial, returns back json
 REMOTE_CALL_API_KEY = 'set_unguessable_remote_api_key_lkjdfljerlj3247LKJ'
+
+MESSAGES = {
+	'FAILURE': 'این شماره هولوگرام یافت نشد. لطفا دوباره سعی کنید  و یا با واحد پشتیبانی تماس حاصل فرمایید.
+ساختار صحیح شماره هولوگرام بصورت دو حرف انگلیسی و 7 یا 8 رقم در دنباله آن می باشد. مثال:
+FA1234567
+شماره تماس با بخش پشتیبانی فروش شرکت التک:
+021-22038385',
+
+    'DOUBLE': 'این شماره هولوگرام مورد تایید است.
+برای اطلاعات بیشتر از نوع محصول با بخش پشتیبانی فروش شرکت التک تماس حاصل فرمایید:
+021-22038385',
+
+
+	'OK': 'Genuine product of Schneider Electric
+شماره تماس با بخش پشتیبانی فروش شرکت التک:
+021-22038385',
+
+
+
+	'NOT_FOUND': 'این شماره هولوگرام یافت نشد. لطفا دوباره سعی کنید  و یا با واحد پشتیبانی تماس حاصل فرمایید.
+ساختار صحیح شماره هولوگرام بصورت دو حرف انگلیسی و 7 یا 8 رقم در دنباله آن می باشد. مثال:
+FA1234567
+شماره تماس با بخش پشتیبانی فروش شرکت التک:
+021-22038385'
+}
