--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+beautifultable==0.8.0
 certifi==2019.11.28
+cffi==1.15.1
 chardet==3.0.4
 Click==7.0
+cryptography==37.0.4
+et-xmlfile==1.1.0
+fandogh-cli==1.26.10
 Flask==1.1.1
 Flask-Limiter==1.1.0
 Flask-Login==0.5.0
@@ -9,17 +14,25 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 limits==1.5
 MarkupSafe==1.1.1
-mysql==0.0.2
-mysqlclient==1.4.6
-numpy==1.18.1
-pandas==1.0.1
+mysql==0.0.3
+mysqlclient==2.1.1
+numpy==1.23.1
+openpyxl==3.0.10
+pandas==1.3.5
 pycodestyle==2.5.0
+pycparser==2.21
+pyOpenSSL==22.0.0
 python-dateutil==2.8.1
 pytz==2019.3
+PyYAML==5.4.1
 requests==2.22.0
+requests-toolbelt==0.9.1
+retrying==1.3.3
 rope==0.16.0
 six==1.14.0
+tzlocal==2.1
 urllib3==1.25.8
+websocket-client==1.3.3
 Werkzeug==1.0.0
 xlrd==1.2.0
 yapf==0.29.0
