--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ limits==1.5
 MarkupSafe==1.1.1
 mysql==0.0.3
 mysqlclient==2.1.1
-numpy==1.23.1
+numpy
 openpyxl==3.0.10
 pandas==1.3.5
 pycodestyle==2.5.0
